added new project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
+		<img src="https://drive.google.com/uc?id=15cHy4kyuYUcFeWH3horMy7cSGQM9QaOg" alt=""/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Collab, Bro?</h3>
+			<p>I built a multi-page responsive collaboration website for artists. I used HTML, CSS, and Bootstrap.
+			This took me about 10 hours to build. </p>
+			<a href="https://github.com/genesisbarrios/collabBro" target="_blank" class="button">View Project.</a>
+	</div>
+	</div>
+</section>
+
+<section class="projects" id="projects">
+	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1bnWB6mg2GA9R8PVr3SpBzODUmulKx02g" alt=""/>
 	</div>
 	<div class="text-box">
