added new project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
+		<img src="https://drive.google.com/uc?id=1irTERz9DwPp6F986lAduIZfSmb2BYcGN" alt=""/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Shapes and Sounds - A Patatap Clone</h3>
+			<p>I built a patatap.com clone using paper.js, howler.js, and sounds from a new song I've been working on.</p>
+			<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="button">View Project.</a>
+		</div>
+	</div>
+</section>
+
+<section class="projects" id="projects">
+	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1Wp5mkrQl4qpsIKZB_SoqBJO7rNlnc99M" alt=""/>
 	</div>
 	<div class="text-box">
