added dates, centered text content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Shapes and Sounds - A Patatap Clone</h3>
+			<p class="date">May, 2018</p>
 			<p>I built a patatap.com clone using paper.js, howler.js, and sounds from a new song I've been working on.</p>
 			<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="button">View Project.</a>
 		</div>
@@ -39,6 +40,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Cardi B Soundboard</h3>
+			<p class="date">May, 2018</p>
 			<p>I built a soundboard for the sounds of Cardi B. I used HTML, CSS, and a bit of Javascript.</p>
 			<a href="https://github.com/genesisbarrios/cardibSoundBoard" target="_blank" class="button">View Project.</a>
 		</div>
@@ -52,6 +54,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Collab, Bro?</h3>
+			<p class="date">April, 2018</p>
 			<p>I built a multi-page responsive collaboration website for artists. I used HTML, CSS, and Bootstrap.
 			This took me about 10 hours to build. </p>
 			<a href="https://github.com/genesisbarrios/collabBro" target="_blank" class="button">View Project.</a>
@@ -66,6 +69,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>3:2</h3>
+			<p class="date">March, 2018</p>
 			<p>I built a website gallery that shows images that have a 3 by 2 aspect ratio. There are different 
 			pages for different themes. I used HTML, CSS, and flex-box. This took me a few hours to build. In the
 			future I plan on allowing visitors to add their photos and create new theme pages. </p>
@@ -81,21 +85,9 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Artist Website</h3>
+			<p class="date">March, 2018</p>
 			<p>I built an artist website for myself. I used HTML, CSS, and flex-box. I achieved this in a couple of days.</p>
 			<a href="https://github.com/genesisbarrios/artistwebsite" target="_blank" class="button">View Project.</a>
-	</div>
-	</div>
-</section>
-
-<section class="projects">
-	<div class="image-area left">
-		<img src="https://firefly-challengepost.netdna-ssl.com/usercontent/fill/333/222/cGhvdG9zL3Byb2R1Y3Rpb24vc29mdHdhcmVfdGh1bWJuYWlsX3Bob3Rvcy8wMDAvNTk3LzMzNC9kYXRhcy9vcmlnaW5hbC5wbmc=/michaeldale.png?signature=a396277b7b1b9e338aa819db4e9c5103f2630832" alt=""/>
-	</div>
-	<div class="text-box">
-		<div class="text-box-content">
-			<h3>Automated Bulk Texting</h3>
-			<p>As our MangoHacks 2018 submission my team and I created an application in Python that takes data from an excel spreadsheet and sends custom scheduled text messages to one or many clients at a time. I mostly worked on the front end of the application.</p>
-			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
 	</div>
 	</div>
 </section>
@@ -107,6 +99,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Piano</h3>
+			<p class="date">March, 2018</p>
 			<p>I created a virtual piano in Java. It is a full 88 key piano. Only one octave is visible at a time, but you can click the plus or minus buttons to navigate the octaves.</p>
 			<a href="https://github.com/genesisbarrios/VirtualPiano" target="_blank" class="button">View Project.</a>
 	</div>
@@ -120,8 +113,23 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Calculator</h3>
+			<p class="date">March, 2018</p>
 			<p>I created a simple calculator in Java.</p>
 			<a href="https://github.com/genesisbarrios/Calculator" target="_blank" class="button">View Project.</a>
+	</div>
+	</div>
+</section>
+
+<section class="projects">
+	<div class="image-area left">
+		<img src="https://firefly-challengepost.netdna-ssl.com/usercontent/fill/333/222/cGhvdG9zL3Byb2R1Y3Rpb24vc29mdHdhcmVfdGh1bWJuYWlsX3Bob3Rvcy8wMDAvNTk3LzMzNC9kYXRhcy9vcmlnaW5hbC5wbmc=/michaeldale.png?signature=a396277b7b1b9e338aa819db4e9c5103f2630832" alt=""/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Automated Bulk Texting</h3>
+			<p class="date">February, 2018</p>
+			<p>As our MangoHacks submission my team and I created an application in Python that takes data from an excel spreadsheet and sends custom scheduled text messages to one or many clients at a time. I mostly worked on the front end of the application.</p>
+			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
 	</div>
 	</div>
 </section>
@@ -133,6 +141,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Listy String</h3>
+			<p class="date">October, 2017</p>
 			<p>A C program for my Computer Science I course. I used linked lists to represent strings and created functions that manipulate the linked lists to transmute the strings that they represent.</p>
 			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
 	</div>
@@ -147,6 +156,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Varg</h3>
+			<p class="date">September, 2017</p>
 			<p>A C program for my Computer Science I course. I created two variadic functions that return the most frequently occuring character that was passed in.</p>
 			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
 	</div>
@@ -161,6 +171,7 @@
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Two Player Hangman</h3>
+			<p class="date">March, 2017</p>
 			<p>As my TADHack Mini Orlando 2017 project submission I created a two-player web hangman game with an integrated audio call using the Temasys WebRTC APIs.</p>
 			<a href="https://github.com/bennypaulino/peer-to-peer-hangman" target="_blank" class="button">View Project.</a>
 	</div>
