added new project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
+		<img src="https://drive.google.com/uc?id=1C5V2inE3EzHqoI9vdb1rgkKIzwq4CfUD" alt=""/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Weather App</h3>
+			<p class="date">June, 2018</p>
+			<p>I built a weather app in node.js with the openweathermap api.<p>
+			<a href="https://github.com/genesisbarrios/weatherApp" target="_blank" class="button">View Project.</a>
+		</div>
+	</div>
+</section>
+
+<section class="projects" id="projects">
+	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1irTERz9DwPp6F986lAduIZfSmb2BYcGN" alt=""/>
 	</div>
 	<div class="text-box">
