--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="author" content="Genesis Barrios">
 	<link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Tajawal" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="scroll.js"></script>
 	<title> Genesis Barrios | Software Engineer</title>
 </head>
 
@@ -15,7 +16,7 @@
 	<div class="intro">			
 		<h1 class="flex-row">Genesis Barrios</h1>
 		<h2 class="flex-row">Software Engineer</h2>
-		<a href="#projects" class="flex-row view-projects">View Projects</a>
+		<a href="#" class="flex-row view-projects" id="projLink">View Projects</a>
 	</div>
 </header>
 
@@ -33,7 +34,7 @@
 	</div>
 </section>
 
-<section class="projects" id="projects">
+<section class="projects">
 	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1irTERz9DwPp6F986lAduIZfSmb2BYcGN" alt=""/>
 	</div>
@@ -47,7 +48,7 @@
 	</div>
 </section>
 
-<section class="projects" id="projects">
+<section class="projects">
 	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1Wp5mkrQl4qpsIKZB_SoqBJO7rNlnc99M" alt=""/>
 	</div>
@@ -61,7 +62,7 @@
 	</div>
 </section>
 
-<section class="projects" id="projects">
+<section class="projects">
 	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=15cHy4kyuYUcFeWH3horMy7cSGQM9QaOg" alt=""/>
 	</div>
@@ -76,7 +77,7 @@
 	</div>
 </section>
 
-<section class="projects" id="projects">
+<section class="projects">
 	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1bnWB6mg2GA9R8PVr3SpBzODUmulKx02g" alt=""/>
 	</div>
