--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1WN_lFFq5IrQ594b9h3TtX8Ex-3GJnUdz" alt=""/>
+		<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt=""/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Catering Form</h3>
+			<p class="date">August, 2018</p>
+			<p>Created an application that allows users to fill out a form with their contact information
+			and what items they want from a catering menu. Upon submission of the form, this data is stored
+			into our Microsoft SQL database, and an e-mail with the order is sent to the caterer, the requestor,
+			and the managers. 
+			<p>
+			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
+		</div>
+	</div>
+</section>
+
+<section class="projects" id="projects">
+	<div class="image-area">
+		<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -36,7 +54,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1irTERz9DwPp6F986lAduIZfSmb2BYcGN" alt=""/>
+		<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -50,7 +68,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1Wp5mkrQl4qpsIKZB_SoqBJO7rNlnc99M" alt=""/>
+		<img src="https://drive.google.com/uc?id=19znJAVWlngadQzrUn4mHKAmc1Smkf68X" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -64,13 +82,14 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=15cHy4kyuYUcFeWH3horMy7cSGQM9QaOg" alt=""/>
+		<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Collab, Bro?</h3>
 			<p class="date">April, 2018</p>
-			<p>I built a multi-page responsive collaboration website for artists. I used HTML, CSS, and Bootstrap.
+			<p>I built the front end of a multi-page responsive website for artists 
+			that want to collaborate with each other. I used HTML, CSS, and Bootstrap.
 			This took me about 10 hours to build. </p>
 			<a href="https://github.com/genesisbarrios/collabBro" target="_blank" class="button">View Project.</a>
 		</div>
@@ -79,7 +98,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1bnWB6mg2GA9R8PVr3SpBzODUmulKx02g" alt=""/>
+		<img src="https://drive.google.com/uc?id=1Zrb2I2BzSoMwLkSV2khyb86Mx7a7yQQf" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -95,7 +114,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=11YZhumDWOMKEVRMptDePXND903ZhnZdJ" alt=""/>
+		<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -109,7 +128,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=1mCI1U1lsoFtyX58cXCMOP5NzIKfqKLe9" alt=""/>
+		<img src="https://drive.google.com/uc?id=1Ay8NyR2Jg1UpvxoYWZV5wtKB5CS7jKtG" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -123,7 +142,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=1YZL1-f4ozzp7PrJC0n5YtO46Q6NUqllk" alt=""/>
+		<img src="https://drive.google.com/uc?id=1g1lhDPxsTBeVAxKu8esirJ-puIGJz9vM" alt=""/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
