added bsc miami website

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt=""/>
+		<img src="https://drive.google.com/uc?id=1APTYesK8Gch2D7PTmpitB1CgzIgUc7L3" alt="BSC Miami Website"/>
+	</div>
+	<div class="text-box">
+		<div class="text-box-content">
+			<h3>Business Software Consulting, Inc. Website</h3>
+			<p class="date">August, 2018</p>
+			<p>Built a custom WordPress theme for the Business Software Consulting website.  
+			</p>
+			<a href="https://bscmiami.com" target="_blank" class="button">View Project.</a>
+		</div>
+	</div>
+</section>
+
+<section class="projects" id="projects">
+	<div class="image-area">
+		<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt="Catering Form Project"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -32,7 +47,7 @@
 			and what items they want from a catering menu. Upon submission of the form, this data is stored
 			into our Microsoft SQL database, and an e-mail with the order is sent to the caterer, the requestor,
 			and the managers. 
-			<p>
+			</p>
 			<a href="mailto:genesisbarriosdev@gmail.com" class="button">Code available upon request.</a>
 		</div>
 	</div>
@@ -40,13 +55,13 @@
 
 <section class="projects" id="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt=""/>
+		<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt="Weather App"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
 			<h3>Weather App</h3>
 			<p class="date">June, 2018</p>
-			<p>I built a weather app in node.js with the openweathermap api.<p>
+			<p>I built a weather app in node.js with the openweathermap api.</p>
 			<a href="https://github.com/genesisbarrios/weatherApp" target="_blank" class="button">View Project.</a>
 		</div>
 	</div>
@@ -54,7 +69,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt=""/>
+		<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Clone"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -68,7 +83,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=19znJAVWlngadQzrUn4mHKAmc1Smkf68X" alt=""/>
+		<img src="https://drive.google.com/uc?id=19znJAVWlngadQzrUn4mHKAmc1Smkf68X" alt="Cardi B Soundboard"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -82,7 +97,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt=""/>
+		<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt="Collaboration Website"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -98,7 +113,7 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=1Zrb2I2BzSoMwLkSV2khyb86Mx7a7yQQf" alt=""/>
+		<img src="https://drive.google.com/uc?id=1Zrb2I2BzSoMwLkSV2khyb86Mx7a7yQQf" alt="Image Gallery"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -114,7 +129,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt=""/>
+		<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt="Artist Website"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -128,7 +143,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=1Ay8NyR2Jg1UpvxoYWZV5wtKB5CS7jKtG" alt=""/>
+		<img src="https://drive.google.com/uc?id=1Ay8NyR2Jg1UpvxoYWZV5wtKB5CS7jKtG" alt="Virtual Piano"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -142,7 +157,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://drive.google.com/uc?id=1g1lhDPxsTBeVAxKu8esirJ-puIGJz9vM" alt=""/>
+		<img src="https://drive.google.com/uc?id=1g1lhDPxsTBeVAxKu8esirJ-puIGJz9vM" alt="Calculator"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -156,7 +171,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://firefly-challengepost.netdna-ssl.com/usercontent/fill/333/222/cGhvdG9zL3Byb2R1Y3Rpb24vc29mdHdhcmVfdGh1bWJuYWlsX3Bob3Rvcy8wMDAvNTk3LzMzNC9kYXRhcy9vcmlnaW5hbC5wbmc=/michaeldale.png?signature=a396277b7b1b9e338aa819db4e9c5103f2630832" alt=""/>
+		<img src="https://firefly-challengepost.netdna-ssl.com/usercontent/fill/333/222/cGhvdG9zL3Byb2R1Y3Rpb24vc29mdHdhcmVfdGh1bWJuYWlsX3Bob3Rvcy8wMDAvNTk3LzMzNC9kYXRhcy9vcmlnaW5hbC5wbmc=/michaeldale.png?signature=a396277b7b1b9e338aa819db4e9c5103f2630832" alt="Bulk Texting Application"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
@@ -200,7 +215,7 @@
 <section class="projects">
 	
 	<div class="image-area left">
-		<img src="https://cdn.pixabay.com/photo/2014/03/07/09/43/robot-281880__340.jpg" alt=""/>
+		<img src="https://cdn.pixabay.com/photo/2014/03/07/09/43/robot-281880__340.jpg" alt="Two Player Web Hangman"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
