--- a/index.html
+++ b/index.html
@@ -83,20 +83,6 @@
 
 <section class="projects">
 	<div class="image-area">
-		<img src="https://drive.google.com/uc?id=19znJAVWlngadQzrUn4mHKAmc1Smkf68X" alt="Cardi B Soundboard"/>
-	</div>
-	<div class="text-box">
-		<div class="text-box-content">
-			<h3>Cardi B Soundboard</h3>
-			<p class="date">May, 2018</p>
-			<p>I built a soundboard for the sounds of Cardi B. I used HTML, CSS, and a bit of Javascript.</p>
-			<a href="https://github.com/genesisbarrios/cardibSoundBoard" target="_blank" class="button">View Project.</a>
-		</div>
-	</div>
-</section>
-
-<section class="projects">
-	<div class="image-area">
 		<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt="Collaboration Website"/>
 	</div>
 	<div class="text-box">
@@ -171,7 +157,7 @@
 
 <section class="projects">
 	<div class="image-area left">
-		<img src="https://firefly-challengepost.netdna-ssl.com/usercontent/fill/333/222/cGhvdG9zL3Byb2R1Y3Rpb24vc29mdHdhcmVfdGh1bWJuYWlsX3Bob3Rvcy8wMDAvNTk3LzMzNC9kYXRhcy9vcmlnaW5hbC5wbmc=/michaeldale.png?signature=a396277b7b1b9e338aa819db4e9c5103f2630832" alt="Bulk Texting Application"/>
+		<img src="https://drive.google.com/uc?id=1FMw6bO6LfzOKDr4sn9nRnJM42RGPkMCQ" alt="Bulk Texting Application"/>
 	</div>
 	<div class="text-box">
 		<div class="text-box-content">
