--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 
 	<section class="projects d-flex">
 		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1D-FC7RuBkkuSbg-jYBQvb_ZHJv8MSN0b" alt="BMP Image Processor"/>
+			<h2>BMP Image Processor</h2>
+			<p class="serif"> March, 2019 </p>
+			<p class="serif">An assignment for my Programming 3 class. It takes a bmp image and given the options(from the command line): it will scale the image, rotate the image, or flip the image horizonally or vertically.</p>
+			<div class="row">
+				<a href="mailto:genesisbarriosdev@gmail.com" target="_blank" class="view-button">Request Code</a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects darkBlue d-flex">
+		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1APTYesK8Gch2D7PTmpitB1CgzIgUc7L3" alt="BSC Website"/>
 			<h2>Business Software Consulting Website</h2>
 			<p class="serif"> September, 2018 </p>
@@ -77,10 +89,9 @@
 			<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt="Catering Form Project"/>
 			<h2>Catering Form Project</h2>
 			<p class="serif"> August, 2018 </p>
-			<p class="serif"> I created an application that allows users to fill out a form with their contact information
-			and what items they want from a catering menu. Upon submission of the form, this data is stored
-			into our Microsoft SQL database, and an e-mail with the order is sent to the caterer, the requestor,
-			and the managers.</p>
+			<p class="serif"> An application that allows users to fill out a form with their contact information
+			and what items they want from a menu. Upon submission, this data is stored into our Microsoft SQL database, 
+			and an e-mail with the order information is sent.</p>
 			<div class="row">
 				<a href="mailto:genesisbarriosdev@gmail.com" class="view-button">Request Code</a>
 			</div>
