--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 							</h2>
 						<p class="serif">
 							As a Computer Science Undergraduate at Florida International University I have studied C Programming,
-							Java Programming, Data Structures, Discrete Math, Databases, and Programming Languages. In my free time 
-							I have learned Web Development and have been employed as a Front-End Engineer since June 2017. I am 
-							also learning Back End Development with Java, as well as Node.js. 
+							Java Programming, Data Structures, Discrete Structures, Computer Architecture, Database Management, 
+							and Programming Languages. In my free time I have learned Web Development and have been employed as 
+							a Front-End Software Engineer since June of 2018. I am also learning Back End Development with Java, as well as Node.js. 
 						</p>
 					</div>
 				</div>
