--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 							As a Computer Science Undergraduate at Florida International University I have studied C Programming,
 							Java Programming, Data Structures, Discrete Structures, Computer Architecture, Database Management, 
 							and Programming Languages. In my free time I have learned Web Development and have been employed as 
-							a Front-End Software Engineer since June of 2018. I am also learning Back End Development with Java, as well as Node.js. 
+							a Front-End Software Engineer since June of 2018. I am also learning Back End Development with Java, 
+							as well as Node.js. 
 						</p>
 					</div>
 				</div>
