--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 	<script src="scroll.js"></script>
 	<title> Genesis Barrios | Software Engineer</title>
 </head>
 <body>
 	<div class="container-fluid bg row" id="top">
 		<div class="fill col-10" >
-			<div class="row">
+			<div class="row align-items-center">
 				<div class="col-1">
 				</div>
 
 				<div class="col-3">
-					<div class="face-cont">
+					<div class="face-cont" id="face">
 						<img class="face" src="https://drive.google.com/uc?id=1japqUBN1T_J1MxP_USSy0mtIZezem12s">
 					</div>
 				</div>
 
 				<div class="col-7">
-					<div class="about-cont">
+					<div class="about-cont" id ="about">
 							<h2 class="bottom-margin accent">
 								<b>Hello! My name is Genesis Barrios.</b>
 								<b>I'm a Software Engineer based in Miami, Florida.</b>
@@ -40,13 +39,11 @@
 							a Front-End Software Engineer since June of 2018. I am also learning Back End Development with Java, 
 							as well as Node.js. 
 						</p>
+						<a href="#" id="projLink">View Projects</a>
 					</div>
 				</div>
 				<div class="col-1">
 				</div>
-			</div>
-			<div class="row space">
-				<a href="#" id="projLink">View Projects</a>
 			</div>
 		</div>
 		<div class="col-xs-1 sidebar">
