--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 	<div class="row" id="projects"></div>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex" style="background-color:black;">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1rP1_y2KxbEAiq_PEmQIAOrippPLSQWkM" alt="Home Page Image"/>
 			<h2>Backroom Sessions iOS Application</h2>
 			<p class="serif"> December, 2019 </p>
-			<p class="serif">An the final project for my Mobile Application Development class, we created an iOS application for a local business.</p>
+			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business.</p>
 			<div class="row">
 				<a href="https://github.com/Isumy/BackroomSessions_Team_B" target="_blank" class="view-button"> View Project</a>
 			</div>
