--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 	<div class="row" id="projects"></div>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex" style="background-color:#02111B; color: white;">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=144tlWhN-Vs7u0htkJ4fsRPBIqvSkvwWe" alt="Home Page Image"/>
+			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB" alt="Home Page Image"/>
 			<h2>Backroom Sessions iOS Application</h2>
 			<p class="serif"> December, 2019 </p>
 			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business.</p>
