--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 	<div class="container-fluid bg row" id="top">
-		<div class="fill col-10" >
-			<div class="row align-items-center">
+		<div class="fill col-10">
+			<div class="row align-items-center" style="margin-bottom:7%;">
 				<div class="col-1">
 				</div>
 
@@ -58,9 +58,9 @@
 
 	<div class="row" id="projects"></div>
 
-	<section class="projects d-flex" style="background-color:#02111B; color: white;">
+	<section class="projects darkgrey d-flex">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB" alt="Home Page Image"/>
+			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
 			<h2>Backroom Sessions iOS Application</h2>
 			<p class="serif"> December, 2019 </p>
 			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business.</p>
@@ -72,7 +72,7 @@
 
 	<section class="projects d-flex">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=10imPKHtmjV_teJIHW1F0emoVAVtyzdqa" alt="Home Page Image"/>
+			<img src="https://drive.google.com/uc?id=10imPKHtmjV_teJIHW1F0emoVAVtyzdqa"/>
 			<h2>Database Web Interface</h2>
 			<p class="serif"> April, 2019 </p>
 			<p class="serif">An assignment for my Database Management class. A node.js application that allows the user to manipulate several tables in a mysql database of Books.</p>
