--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 
 	<div class="row" id="projects"></div>
 
+	<section class="projects d-flex">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
+			<h2>Geek Text</h2>
+			<p class="serif"> December, 2019 </p>
+			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books.</p>
+			<div class="row">
+				<a href="https://github.com/BarbosaO/CEN4010-Team-Project" target="_blank" class="view-button"> View Project</a>
+			</div>
+		</div>
+	</section>
+
 	<section class="projects darkgrey d-flex">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
